--- a/templates/home.html
+++ b/templates/home.html
@@ -29,7 +29,7 @@
             "K-"를 접두사로 붙이는 신조어<br>
             "다른 나라에서는 볼 수 없는 한국만의 모습, 사물, 습성 등"
             </font>
-        </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">[K-"on oxford english dictionary]</a>
+        </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
 
         </p>
             <form method = "POST" action = "/search">
