--- a/templates/home.html
+++ b/templates/home.html
@@ -61,6 +61,8 @@
                 </div> 
             </div>
         </p>
+        <a href='/home/'> 한국어 </a> <br>
+        <a href= '/home_english/'> English </a><br>
     </center>
     </body>
 </html>
