--- a/templates/home.html
+++ b/templates/home.html
@@ -26,12 +26,11 @@
         <p>
             <h3>What is <span>K - Series</span>?</h3>
             <font size="4">
-            "K-"를 접두사로 붙이는 신조어<br>
-	    "다른 나라에서는 볼 수 없는 한국만의 모습, 사물, 습성 등"
-
+                "K-"를 접두사로 붙이는 신조어<br>
+	            "다른 나라에서는 볼 수 없는 한국만의 모습, 사물, 습성 등"
             </font>
-        </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
-	<h6>*네이버 뉴스 데이터에 기반하여 구축하였습니다.</h6>
+            </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
+            </br><h6>*네이버 뉴스 데이터에 기반하여 구축하였습니다.</h6>
         </p>
             <form method = "POST" action = "/search">
                 <h3>What do you want to search?</h3>
@@ -39,6 +38,7 @@
                 <input type = "submit" name="search" value="Search">
                 <input type = "reset" name="clear" vaule="Clear"><br>
             </form>
+            
         <p>
             <div class="chart-area"> 
                 <div id="container" style="width:50%; height:100%;" >
@@ -64,6 +64,6 @@
         </p>
         <a href='/home/'> 한국어 </a> <br>
         <a href= '/home_english/'> English </a><br>
-    </center>
+        </center>
     </body>
 </html>
