--- a/templates/result.html
+++ b/templates/result.html
@@ -15,15 +15,37 @@
         </style>
     </head>
     <body>
+        <center>
         <div>
             <p>
                 {% if flag == 0 %}
-                <h1>{{input}}에 해당하는 결과가 없습니다.</h1></br>
-                {% else %}
+                <h1>K-{{input}} not found</h1></br>
+                <span style = " font-size:1.5em; ">
+                    <a href = https://www.google.com/search?q=K-{{input}} target="_blank">search on google</a>
+                </span>
+                {% elif flag == 1 %}
                     <h1>{{word}}</h1></br>
-                    <h2>대표 기사 : {{title}}</h2>
+                    <h2>searched for {{searchFreq}} times</h2></br>
+                    <a href = {{url}} target = "_blank"><h2>{{title}}</h2></a>
+                    <span style = " font-size:1.5em; ">
+                        <a href = https://www.google.com/search?q={{word}} target="_blank">search on google</a>
+                    </span>
+                {% elif flag == 2 %}
+                    <h1>{{word}}</h1></br>
+                    <h2>searched for {{searchFreq}} times</h2></br>
+                    <span style = " font-size:1.5em; ">
+                        <a href = {{url}} target = "_blank">{{title}}</a></br></br>
+                        <a href = {{url1}} target = "_blank">{{title1}}</a></br></br>
+                        <a href = {{url2}} target = "_blank">{{title2}}</a></br></br>
+                        <a href = {{url3}} target = "_blank">{{title3}}</a></br></br>
+                        <a href = {{url4}} target = "_blank">{{title4}}</a></br></br>
+                        <a href = {{url5}} target = "_blank">{{title5}}</a></br></br>
+                        <a href = https://www.google.com/search?q={{word}} target="_blank">search on google</a>
+                    </span>
                 {% endif %}
                 </p>
         </div>
+        <button onClick="history.back();">return to home</button >
+        </center>
     </body>
 </html>
