--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>K-Series</title>
+        <title>K-시리즈</title>
         <style>
             body { background-color: rgb(213, 221, 229); }
             hr { border : 5px solid rgb(44, 44, 44); }
@@ -19,26 +19,26 @@
     </head>
     <body>
         <center>
-        <h1>Search for <span>K - Series</span></h1>
+        <h1><span>K - 시리즈</span>를 검색!</h1>
         <hr>
             <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/%ED%83%9C%EA%B7%B9%EA%B8%B0%EB%B0%94%EB%9E%8C%EA%B0%9C%EB%B9%84.jpg" 
             width="500",height="500">
         <p>
-            <h3>What is <span>K - Series</span>?</h3>
+            <h3><span>K - 시리즈</span>란?</h3>
             <font size="4">
-                "K-"를 접두사로 붙이는 신조어<br>
-	            "다른 나라에서는 볼 수 없는 한국만의 모습, 사물, 습성 등"
+            "K-"를 접두사로 붙이는 신조어<br>
+	    "다른 나라에서는 볼 수 없는 한국만의 모습, 사물, 습성 등"
+
             </font>
-            </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
-            </br><h6>*네이버 뉴스 데이터에 기반하여 구축하였습니다.</h6>
+        </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
+	<h6>*네이버 뉴스 데이터에 기반하여 구축하였습니다.</h6>
         </p>
             <form method = "POST" action = "/search">
-                <h3>What do you want to search?</h3>
+                <h3>원하는 단어를 검색하세요.</h3>
                 K - <input name="input" type="text" size="10">
                 <input type = "submit" name="search" value="Search">
                 <input type = "reset" name="clear" vaule="Clear"><br>
             </form>
-            
         <p>
             <div class="chart-area"> 
                 <div id="container" style="width:50%; height:100%;" >
@@ -64,6 +64,11 @@
         </p>
         <a href='/home/'> 한국어 </a> <br>
         <a href= '/home_english/'> English </a><br>
-        </center>
+        <a href= '/home_japanese/'> 日本語 </a><br>
+        <a href= '/home_chinese/'> 中文</a><br>
+        <a href= '/home_french/'> Français</a><br>
+        <a href= '/home_spanish/'> español</a><br>
+        
+    </center>
     </body>
 </html>
