--- a/templates/home_chinese.html
+++ b/templates/home_chinese.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>K-Series</title>
+        <title>K-系列</title>
         <style>
             body { background-color: rgb(213, 221, 229); }
             hr { border : 5px solid rgb(44, 44, 44); }
@@ -19,22 +19,22 @@
     </head>
     <body>
         <center>
-        <h1>Search for <span>K - Series</span></h1>
+        <h1>搜索 <span>K-系列</span></h1>
         <hr>
             <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/%ED%83%9C%EA%B7%B9%EA%B8%B0%EB%B0%94%EB%9E%8C%EA%B0%9C%EB%B9%84.jpg" 
             width="500",height="500">
         <p>
-            <h3>What is <span>K - Series</span>?</h3>
+            <h3><span>K-系列</span>是什么？</h3>
             <font size="4">
-            New word : using K in front of word that already exist.<br>
-	    K-series means a korean unique culture.<br>
-            
+            新词:在已经存在的词前使用"K"<br>
+            K-系列意味着韩国固有的文化。
+
             </font>
         </br><a href=https://www.oed.com/view/Entry/92770415 target="_blank">["K-"on oxford english dictionary]</a>
-	<h6>*It is based on NAVER news data</h6>
+	<h6>*基于NAVER新闻数据构建。</h6>
         </p>
             <form method = "POST" action = "/search">
-                <h3>What do you want to search?</h3>
+                <h3>请搜索想要的韩语单词。</h3>
                 K - <input name="input" type="text" size="10">
                 <input type = "submit" name="search" value="Search">
                 <input type = "reset" name="clear" vaule="Clear"><br>
@@ -68,7 +68,6 @@
         <a href= '/home_chinese/'> 中文</a><br>
         <a href= '/home_french/'> Français</a><br>
         <a href= '/home_spanish/'> español</a><br>
-	
     </center>
     </body>
 </html>
