updated image change

--- a/templates/home.html
+++ b/templates/home.html
@@ -21,7 +21,7 @@
         <center>
         <h1><span>K - 시리즈</span>를 검색!</h1>
         <hr>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/%ED%83%9C%EA%B7%B9%EA%B8%B0%EB%B0%94%EB%9E%8C%EA%B0%9C%EB%B9%84.jpg" 
+            <img src={{image_url}} 
             width="500",height="500">
         <p>
             <h3><span>K - 시리즈</span>란?</h3>
