--- a/templates/home_spanish.html
+++ b/templates/home_spanish.html
@@ -21,7 +21,7 @@
         <center>
         <h1>Búsqueda de la <span>serie K</span></h1>
         <hr>
-            <img src="https://upload.wikimedia.org/wikipedia/commons/3/35/%ED%83%9C%EA%B7%B9%EA%B8%B0%EB%B0%94%EB%9E%8C%EA%B0%9C%EB%B9%84.jpg" 
+            <img src={{image_url}} 
             width="500",height="500">
         <p>
             <h3>¿Qué es la <span>serie K</span></h3>
@@ -39,6 +39,8 @@
                 <input type = "submit" name="search" value="Search">
                 <input type = "reset" name="clear" vaule="Clear"><br>
             </form>
+            <h3>palabra más buscada</h3>
+                {{search1}}:{{search1_i}}veces   {{search2}}:{{search2_i}}veces   {{search3}}:{{search3_i}}veces   {{search4}}:{{search4_i}}veces   {{search5}}:{{search5_i}}veces
         <p>
             <div class="chart-area"> 
                 <div id="container" style="width:50%; height:100%;" >
