--- a/templates/result.html
+++ b/templates/result.html
@@ -45,7 +45,7 @@
                 {% endif %}
                 </p>
         </div>
-        <button onClick="history.back();">return to home</button >
+        <button onClick="location.href = document.referrer;">return to home</button >
         </center>
     </body>
 </html>
