--- a/templates/home.html
+++ b/templates/home.html
@@ -39,6 +39,8 @@
                 <input type = "submit" name="search" value="Search">
                 <input type = "reset" name="clear" vaule="Clear"><br>
             </form>
+                <h3>가장 많이 검색된 단어</h3>
+                {{search1}}:{{search1_i}}회   {{search2}}:{{search2_i}}회   {{search3}}:{{search3_i}}회   {{search4}}:{{search4_i}}회   {{search5}}:{{search5_i}}회
         <p>
             <div class="chart-area"> 
                 <div id="container" style="width:50%; height:100%;" >
